UI minor bug fix

--- a/src/userinterface/SystemAdminWorkArea/AdminsManagementJPanel.form
+++ b/src/userinterface/SystemAdminWorkArea/AdminsManagementJPanel.form
@@ -66,14 +66,14 @@
                       </Group>
                       <EmptySpace min="-2" pref="42" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
-                          <Component id="textEnterprise" min="-2" pref="204" max="-2" attributes="0"/>
-                          <Component id="jScrollPane1" alignment="0" min="-2" pref="535" max="-2" attributes="0"/>
+                          <Component id="jScrollPane1" min="-2" pref="535" max="-2" attributes="0"/>
+                          <Component id="textEnterprise" min="-2" max="-2" attributes="0"/>
                       </Group>
                   </Group>
                   <Group type="102" attributes="0">
                       <EmptySpace max="-2" attributes="0"/>
-                      <Component id="btn_back" min="-2" pref="91" max="-2" attributes="0"/>
-                      <EmptySpace min="-2" pref="53" max="-2" attributes="0"/>
+                      <Component id="btn_back" min="-2" max="-2" attributes="0"/>
+                      <EmptySpace min="-2" pref="79" max="-2" attributes="0"/>
                       <Component id="txtheading" min="-2" pref="528" max="-2" attributes="0"/>
                   </Group>
                   <Group type="102" alignment="0" attributes="0">
@@ -81,7 +81,7 @@
                       <Component id="jLabel6" min="-2" pref="632" max="-2" attributes="0"/>
                   </Group>
               </Group>
-              <EmptySpace pref="618" max="32767" attributes="0"/>
+              <EmptySpace pref="183" max="32767" attributes="0"/>
           </Group>
       </Group>
     </DimensionLayout>
@@ -120,7 +120,7 @@
                           <Component id="jLabel5" alignment="3" min="-2" max="-2" attributes="0"/>
                           <Component id="txt_Name" alignment="3" min="-2" max="-2" attributes="0"/>
                       </Group>
-                      <EmptySpace pref="24" max="32767" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
                       <Group type="103" groupAlignment="3" attributes="0">
                           <Component id="btn_create" alignment="3" min="-2" pref="33" max="-2" attributes="0"/>
                           <Component id="btn_save" alignment="3" min="-2" max="-2" attributes="0"/>
@@ -389,7 +389,7 @@
         <Property name="foreground" type="java.awt.Color" editor="org.netbeans.beaninfo.editors.ColorEditor">
           <Color blue="33" green="0" red="ff" type="rgb"/>
         </Property>
-        <Property name="text" type="java.lang.String" value="Enterprise Admins"/>
+        <Property name="text" type="java.lang.String" value="Enterprise Admins:"/>
       </Properties>
     </Component>
     <Component class="javax.swing.JButton" name="btn_update">
