--- a/src/userinterface/SystemAdminWorkArea/NetworkManagementJPanel.form
+++ b/src/userinterface/SystemAdminWorkArea/NetworkManagementJPanel.form
@@ -51,11 +51,11 @@
                       <EmptySpace min="-2" pref="96" max="-2" attributes="0"/>
                       <Group type="103" groupAlignment="0" attributes="0">
                           <Component id="lbl_CitiesPresentInNetwork" min="-2" max="-2" attributes="0"/>
-                          <Component id="jScrollPane1" alignment="0" min="-2" pref="389" max="-2" attributes="0"/>
+                          <Component id="jScrollPane1" min="-2" pref="442" max="-2" attributes="0"/>
                       </Group>
                   </Group>
               </Group>
-              <EmptySpace pref="170" max="32767" attributes="0"/>
+              <EmptySpace pref="302" max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace min="-2" pref="37" max="-2" attributes="0"/>
