--- a/src/userinterface/DonorRole/DonorRegistrationJPanel.form
+++ b/src/userinterface/DonorRole/DonorRegistrationJPanel.form
@@ -464,7 +464,7 @@
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
           <StringArray count="3">
             <StringItem index="0" value="Heart"/>
-            <StringItem index="1" value="Lungs"/>
+            <StringItem index="1" value="Liver"/>
             <StringItem index="2" value="Kidneys"/>
           </StringArray>
         </Property>
